@@ -6,9 +6,10 @@
 // Unique Name Generator -> used to create names (using a base string "critter"
 //                          it generates "critter1", "critter2", etc. etc.
 
+#import <simtools.h> // UName
 #import <objectbase/SwarmObject.h>
 
-@interface UName: SwarmObject
+@interface UName: SwarmObject <UName>
 {
   int counter;
   id baseString;
